5.0.0 -> 5.1a1:
    - rpm.org: Add %{sources} and %{patches} macros to build.
    - rpm.org: Remove some ancient dead code.
    - jbj: fix: eliminate librpmdb->librpm from dosetenv, use setenv(3) instead.
    - jbj: fix: rpmtsCheck non-zero return doesn't print failed build deps.
    - jbj: handle mireRegexec return change internal to rpm code.
    - jbj: mire: change mireRegexec() return: >=0 match, -1 nomatch, else error.
    - jbj: rpmgrep: start untwisting PCRE from rpmgrep (broken w/o PCRE atm).
    - jbj: rpmgrep: add --stats benchmark insturmentatian (patterns soonishly).
    - jbj: rpmdigest: add --stats benchmark insturmentation.
    - jbj: rpmio: add common --stats option.
    - proyvind: add some extra functionality to gendiff (ancient Mandriva patch by Chmouel Boudjnah)
    - pixel: do check free size when bavail is 0
    - jbj: add variadic checks, remove warnings.
    - jbj: refactor rpmcliErase to use same code as rpmtsInstall.
    - jbj: fix: rpmtsCheck non-zero return prevents --erase.
    - jbj: fix: avoid {pre,post}trans scrareMem assert failure.
    - jbj: rpmio: add self-consistent rpmdigest --all verify test.
    - jbj: rpmdigest: do algo name -> number with optionsTable instead.
    - jbj: rpmio: add rpmdigest checks, fix some obvious deficiencies.
    - rpm.org: make find-lang --with-gnome picks up omf files (rhbz#251400)
    - jbj: rpmdigest: add digest verification from manifests a la coreutils.
    - jbj: rpmio: increase no. of digests from 4 => 32 for rpmdigest --all.
    - jbj: rpmio: ops, actually add rpmdigest.c.
    - jbj: refactor digest algorithm popt tables into poptIO.[ch].
    - jbj: move rpmdigest tools/ -> rpmio/ for "make check" purposes.
    - jbj: use Realpath(3) so that RPMTAG_PACKAGEORIGIN has absolute path.
    - jbj: rpmio: add Realpath(3).
    - jbj: fix: header ext for PACKAGEORIGIN needs xstrdup.
    - jbj: use header ext to permit %{PACKAGEORIGIN} for -qp to show *.rpm path.