@@ -183,32 +183,6 @@ install-data-local:
 	esac
 	$(MKDIR_P) $(DESTDIR)$(pkgsrcdir)/RPMS/noarch
 
-.PHONY:	setperms
-setperms:
-	@for f in $(bin_PROGRAMS) ; do\
-	    $(__CHOWN) ${RPMUSER}.${RPMGROUP} $(DESTDIR)$(bindir)/$$f ;\
-	done
-	@for f in $(pkglib_PROGRAMS) ; do\
-	    $(__CHOWN) ${RPMUSER}.${RPMGROUP} $(DESTDIR)$(pkglibdir)/$$f ;\
-	    $(__CHMOD) g+s $(DESTDIR)$(pkglibdir)/$$f ;\
-	done
-	@for f in $(pkglib_SCRIPTS) ; do\
-	    $(__CHOWN) ${RPMUSER}.${RPMGROUP} $(DESTDIR)$(pkglibdir)/$$f ;\
-	done
-	@$(__CHOWN) ${RPMUSER}.${RPMGROUP} $(DESTDIR)$(pkglibdir)
-	@$(__CHOWN) -R ${RPMUSER}.${RPMGROUP} $(DESTDIR)$(varprefix)/lib/rpm
-	@$(__CHOWN) -R ${RPMUSER}.${RPMGROUP} $(DESTDIR)$(varprefix)/spool/repackage
-	-@$(__CHMOD) 0664 $(DESTDIR)$(varprefix)/lib/rpm/[A-Z]*
-	-@$(__CHMOD) 0775 $(DESTDIR)$(varprefix)/lib/rpm
-	-@$(__CHMOD) 0664 $(DESTDIR)$(varprefix)/lib/rpm/__db.*
-	-@$(__CHMOD) 0755 $(DESTDIR)$(varprefix)/spool/repackage
-
-.PHONY:	unsetgid
-unsetgid:
-	@for f in $(pkglib_PROGRAMS) ; do\
-	    $(__CHMOD) g-s $(DESTDIR)$(pkglibdir)/$$f ;\
-	done
-
 .PHONY: tar
 tar:
 	rm -rf /tmp/rpm-$(VERSION)
